# draftbud

./: Cargo.toml  flake.nix
.github/workflows/: build_nix.yml
data/: advancements.json  effects.json  foods.json
src/: commands.rs  main.rs  utils.rs
src/commands/: advancements.rs  effects.rs  foods.rs  recipe.rs  stew.rs
src/commands/recipe/: api.rs  condense.rs  merge.rs  query.rs  render.rs  types.rs
