[package]
name = "draftbud"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
comfy-table = "7.2.2"

[profile.release]
opt-level = "s"  # Optimize for size
lto = true       # Link-Time Optimization (can remove dead code)
strip = true     # Automatically strip symbols from the binary.
