[package]
name = "draftbud"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
comfy-table = { version = "7.2.2", features = ["custom_styling"] }
dirs = "6.0.0"
heck = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ureq = "3.3.0"

[profile.release]
opt-level = "s"  # Optimize for size
lto = true       # Link-Time Optimization (can remove dead code)
strip = true     # Automatically strip symbols from the binary.
